<resources>
    <string name="app_name">Represent</string>
    <string name="action_settings">Settings</string>
    <string name="zipcode_button">Zipcode</string>
    <string name="location_button">Current Location</string>
    <string name="house">Michael M. Honda</string>
    <string name="senator1">Sarah Palin</string>
    <string name="senator2">Ma Ying-jeou</string>
    <string name="position">Position</string>
    <string name="position_house">House Representative</string>
    <string name="position_senator">Senator</string>
    <string name="email">Email</string>
    <string name="endofterm">End of Term</string>
    <string name="committees">Committees</string>
    <string name="website">Website</string>

    <string name="email_house">mhonda@honda.gov</string>
    <string name="website_house">honda.house.gov</string>
    <string name="twittername_house">Rep. Mike Honda</string>
    <string name="twitterhandle_house">\@repMikeHonda</string>
    <string name="tweet_house">Great to meet w/ tech leaders \amp; \@DIU_x, U.S. military\'s group in #CA17 Sunnyvale to strengthen ties w/ #SiliconValley</string>
    <string name="title_activity_reps_at_aglance">RepsAtAGlance</string>

    <string name="twittername_senator1">Sarah Palin</string>
    <string name="twitterhandle_senator1">\@SarahPalinUSA</string>

    <string name="twittername_senator2">Ma Ying-Jeou</string>
    <string name="twitterhandle_senator2">\@mayingjeou</string>
    <string name="title_activity_house_detail">HouseDetailActivity</string>
    <string name="title_activity_senator1_detail">Senator1DetailActivity</string>
    <string name="title_activity_senator2_detail">Senator2DetailActivity</string>
    <string name="title_activity_general_detail">GeneralDetail</string>

</resources>
