<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/house_glance">
    <LinearLayout
        android:id="@+id/info_section"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/republican"
            android:weightSum="1">
            <ImageView
                android:id="@+id/pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/honda_225"
                android:layout_centerVertical="true"
                android:foregroundGravity="left|top"
                android:layout_marginLeft="5dp" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/basic_info"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/republican"
            android:padding="5dp"
            android:layout_below="@id/pic">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_house"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/pic"
                android:src="@drawable/badge_repub"
                android:layout_gravity="center_horizontal" />
            <TextView
                style="@style/RepName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:textSize="@dimen/rep_name"
                android:textAlignment="center"
                android:textColor="@color/offWhite"
                android:text="@string/house"
                android:id="@+id/name"
                android:layout_gravity="bottom" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal">
                <TextView
                    style="@style/Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    android:textColor="@color/offWhite"
                    android:textSize="@dimen/category"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:padding="5dp"
                    android:gravity="left"
                    android:textColor="@color/offWhite"
                    android:text="@string/position_house"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal">
                <TextView
                    style="@style/Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/category"
                    android:textColor="@color/offWhite"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/email"
                    android:autoLink="email"
                    android:textColorLink="@color/divider_republican"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_house"
                    android:textSize="10dp"
                    android:textColor="@color/offWhite"
                    android:padding="5dp"
                    android:gravity="left"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/category"
                    android:textColor="@color/offWhite"
                    android:padding="5dp"/>
                <TextView
                    style="@style/Answer"
                    android:id="@+id/website"
                    android:autoLink="web"
                    android:textColorLink="@color/divider_republican"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_house"
                    android:textSize="10dp"
                    android:padding="5dp"
                    android:textColor="@color/offWhite"
                    android:gravity="left"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/twittercard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="5dp"
        android:layout_below="@id/info_section"
        android:background="@color/offWhite">
        <LinearLayout
            android:id="@+id/tweetHeader_house"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/namespace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/username"
                    style="@style/TwitterUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/twittername_house"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp" />
                <TextView
                    android:id="@+id/twitterhandle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitterhandle_house"
                    android:gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/twitterLogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:src="@drawable/twitter_logo" />
        </LinearLayout>
        <TextView
            android:id="@+id/tweet_house"
            style="@style/Tweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tweetHeader_house"
            android:text="@string/tweet_house"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp" />
    </RelativeLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/twittercard"
        android:text=">>>"
        android:textSize="20dp"
        android:id="@+id/seeMore"
        android:elevation="15dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/divider_republican"
        android:textColor="@color/offWhite" />
</RelativeLayout>
    <!--End of house_glance-->