<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/independent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/glance">
            <ImageView
                android:id="@+id/pic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/honda500x250"/>
            <TextView
                style="@style/RepName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider_independent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="@dimen/rep_name"
                android:textColor="@color/offWhite"
                android:text="@string/house"
                android:id="@+id/name"
                android:layout_below="@id/pic"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_house"
                android:gravity="right"
                android:src="@drawable/badge_indep"
                android:elevation="15dp"
                android:layout_alignBottom="@+id/name"
                android:layout_alignParentEnd="true" />
            <LinearLayout
                android:id="@+id/basic_info"
                android:layout_below="@id/name"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/independent"
                android:padding="5dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/position"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:textColor="@color/offWhite"
                        android:textSize="@dimen/category"
                        android:padding="5dp"/>
                    <TextView

                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/answer"
                        android:padding="5dp"
                        android:gravity="left"
                        android:textColor="@color/offWhite"
                        android:text="@string/position_house"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:textSize="@dimen/category"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"/>
                    <TextView
                        android:id="@+id/email"
                        android:autoLink="email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_house"
                        android:textSize="@dimen/answer"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"
                        android:gravity="left"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start">
                    <TextView
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="End of Term"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:textSize="@dimen/category"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"/>
                    <TextView
                        android:id="@+id/eot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="January 3, 2017"
                        android:textSize="@dimen/answer"
                        android:padding="5dp"
                        android:textColor="@color/offWhite"
                        android:gravity="left"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="Committees"
                        android:gravity="left"
                        android:textAlignment="gravity"
                        android:textSize="@dimen/category"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"/>
                    <LinearLayout
                        android:id="@+id/committees"
                        android:paddingLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">
                    <TextView
                        style="@style/Answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Bills Sponsored"
                        android:gravity="left"
                        android:textSize="@dimen/category"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"/>
                    <LinearLayout
                        android:id="@+id/bills"
                        android:paddingLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
