<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michang.represent.Senator1DetailActivity"
    tools:showIn="@layout/activity_senator1_detail"
    android:background="@color/republican">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/house_glance">
            <ImageView
                android:id="@+id/house_pic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/palin"/>
            <TextView
                style="@style/RepName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#809F3B3B"
                android:layout_alignBottom="@id/house_pic"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:textSize="@dimen/rep_name"
                android:textColor="@color/offWhite"
                android:text="@string/house"
                android:id="@+id/textView" />
            <LinearLayout
                android:id="@+id/house_basic_info"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/republican"
                android:padding="5dp"
                android:layout_below="@id/house_pic">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/position"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:textColor="@color/offWhite"
                        android:textSize="@dimen/category"
                        android:padding="5dp"/>
                    <TextView
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/answer"
                        android:padding="5dp"
                        android:gravity="left"
                        android:textColor="@color/offWhite"
                        android:text="@string/position_house"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:textSize="@dimen/category"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"/>
                    <TextView
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_house"
                        android:textSize="@dimen/answer"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"
                        android:gravity="left"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="End of Term"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:textSize="@dimen/category"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"/>
                    <TextView
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="January 3, 2017"
                        android:textSize="@dimen/answer"
                        android:padding="5dp"
                        android:textColor="@color/offWhite"
                        android:gravity="left"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Committees"
                        android:textAlignment="gravity"
                        android:textSize="@dimen/category"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/Answer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Commerce, Justice and Science"
                            android:textSize="@dimen/answer"
                            android:padding="5dp"
                            android:textColor="@color/offWhite" />
                        <TextView
                            style="@style/Answer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Energy and Water Development"
                            android:textSize="@dimen/answer"
                            android:padding="5dp"
                            android:textColor="@color/offWhite" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Bills Sponsored"
                        android:gravity="left"
                        android:textSize="@dimen/category"
                        android:textColor="@color/offWhite"
                        android:padding="5dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                style="@style/Answer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="February 2, 2016"
                                android:textSize="@dimen/answer"
                                android:padding="5dp"
                                android:textColor="@color/offWhite" />
                            <TextView
                                style="@style/Answer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="July 29, 2015"
                                android:textSize="@dimen/answer"
                                android:padding="5dp"
                                android:textColor="@color/offWhite" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                style="@style/Answer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Educator Preparation Reform Act"
                                android:textSize="@dimen/answer"
                                android:padding="5dp"
                                android:textColor="@color/offWhite" />
                            <TextView
                                style="@style/Answer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="CPI-E Act of 2015"
                                android:textSize="@dimen/answer"
                                android:padding="5dp"
                                android:textColor="@color/offWhite" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_house"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/badge_repub"
                android:elevation="10dp"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
